use-psp-nonpriv.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: psp-test
