apparmor-disk-write.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: apparmor-disk-write
  annotations:
    container.apparmor.security.beta.kubernetes.io/busybox: localhost/k8s-apparmor-example-deny-write        
spec:
  containers:
  - image: busybox
    name: busybox
    command: ['sh','-c', 'while true; do echo "I write to the disk!" > diskwrite.log; sleep 5; done']
