client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: nptest
  labels:
    app: client        
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do curl -m 3 192.168.194.65; sleep 5;done']
