ingrestest-nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-nginx
  namespace: ingresstest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingresstest-nginx
  template:
    metadata:
      labels:
        app: ingresstest-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
