pod-viewer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-viewer-pod
  namespace: sa-permissions-test
spec:
  containers:
  - command:
    - sh
    - -c
    - 'TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token); while true;
      do if curl -s -o /dev/null -k -m 3 -H "Authorization: Bearer $TOKEN" https://kubernetes.default.svc.cluster.local/api/v1/namespaces/auth/pods/;
      then echo "[SUCCESS] Successfully viewed Pods!"; else echo "[FAIL] Failed to
      view Pods!"; fi; sleep 5; done'
    image: radial/busyboxplus:curl
    name: busybox
  serviceAccountName: pod-viewer-sa
