secret-pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod-env
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command: ['sh','-c','echo "Las Credenciales son: $USERNAME:$PASSWORD"']
