secret-pod-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod-vol
spec:
  volumes:      
  - name: vol-credenciales
    secret:
      secretName: secret-env-var         
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command: ['sh','-c','cat /etc/credenciales/username; echo " "; cat /etc/credenciales/password; sleep 3600 ']
    volumeMounts:
    - name: vol-credenciales
      mountPath: /etc/credenciales
      readOnly: true
