security-context-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: security-context-pod
  name: security-context-pod
spec:
  securityContext:
    runAsUser: 100        
  containers:
  - command:
    - sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox
    securityContext:
      allowPrivilegeEscalation: False
