tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: tls-ingress
  namespace: ingresstest
spec:
  ingressClassName: default
  rules:
  - host: ingress.test
    http:
      paths:
      - backend:
          service:
            name: ingresstest-nginx-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ingress.test
    secretName: ingress-tls
status:
  loadBalancer: {}
