nginx-ingress-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-ingress
  namespace: nptest
spec:
  podSelector:
    matchLabels:
      app: nginx        
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: test
      podSelector:
        matchLabels:
          app: client
    ports:
    - protocol: TCP
      port: 80
